--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   /* text-align: center; */
-  background-color: #FFEDDA;
+  /* background-color: #FFEDDA; */
+  background-color: white;
 }
 
 .App-header {
