--- a/src/components/FriendsList/index.css
+++ b/src/components/FriendsList/index.css
@@ -3,8 +3,67 @@
     border-radius: 0.3rem;
     margin: 2rem;
     width: 25rem;
+    height: 30rem;
     position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
     box-shadow: 0 0.5rem 0.5rem rgba(0,0,0,0.19), 0 0.5rem 0.5rem rgba(0,0,0,0.23);
+}
+
+.friend-list-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 2rem;
+    border-bottom: 0.2rem solid #484848;
+}
+
+.list-title {
+    color: #484848;
+}
+
+.friend-list-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.friend-name-input {
+    font-size: 1.5rem;
+    height: 2rem;
+    width: 15rem;
+}
+
+.add-friend-btn {
+    background: none;
+    border: none;
+}
+
+.plus-icon {
+    width: 1.5rem;
+}
+
+.list-content {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+    overflow-y: scroll;
+}
+
+.list-content::-webkit-scrollbar{
+    display: none;
+}
+
+.friend-li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 15rem;
+    height: 2rem;
+    margin-bottom: 1rem;
+    box-shadow: 0 0.1rem 0.1rem rgba(0,0,0,0.19), 0 0.1rem 0.1rem rgba(0,0,0,0.23);
 }
