--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -4,10 +4,10 @@
 }
 .login-block {
     background: #FF2442;
-    border-radius: 3rem;
+    border-radius: 6rem;
     margin: 2rem;
-    width: 50rem;
-    height: 60vh;
+    width: 40rem;
+    height: 75vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -23,7 +23,7 @@
 
 .form-block {
     background: #fff;
-    border-radius: 3rem;
+    border-radius: 4rem;
     margin: 2rem;
     width: 30rem;
     height: 60vh;
@@ -39,6 +39,7 @@
 
     color: #FF2442;
     font-weight: bolder;
+    font-size: 1.7rem;
 
 }
 
