--- a/src/components/News/index.css
+++ b/src/components/News/index.css
@@ -9,13 +9,18 @@
     flex-direction: column;
     align-items: center;
     box-shadow: 0 0.5rem 0.5rem rgba(0,0,0,0.19), 0 0.5rem 0.5rem rgba(0,0,0,0.23);
-    overflow-y: scroll;
 }
-.news-block::-webkit-scrollbar{
-    display: none;
-  }
+
 .news {
     color: #484848;
+}
+
+.news-list {
+    overflow-y: scroll;
+}
+
+.news-list::-webkit-scrollbar{
+    display: none;
 }
 
 .news-card {
