--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -21,6 +21,7 @@
 .bm-cross-button {
   height: 24px;
   width: 24px;
+  margin-top: 6rem;
 }
 
 /* Color/shape of close button cross */
@@ -35,6 +36,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-menu-wrap {
   position: fixed;
   height: 100%;
+  padding-top: 6rem;
 }
 
 /* General sidebar styles */
