Working on Login and CreateAccount components
+ Working on details of the Login component

+ Creating the CreateAccount component

--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -64,3 +64,11 @@
     box-shadow: 0 0.2rem rgb(150, 0, 0);
     transform: translateY(4px);
 }
+
+h5 {
+    font-size: 0.8rem;
+}
+
+.create-account-href {
+    color: #3DB2FF;
+}
