Update CreateAccount page
When trying to create an account, shows on screen if the user already existed or if the account was created successfully

--- a/src/components/CreateAccount/index.css
+++ b/src/components/CreateAccount/index.css
@@ -43,10 +43,10 @@
 
 }
 
-.password-message {
+.system-message {
     height: 0.1rem;
     font-size: 0.8rem;
-    margin-top: -0.05rem;
+    margin-top: -0.1rem;
 }
 
 .btn{
