--- a/src/components/FriendsList/index.css
+++ b/src/components/FriendsList/index.css
@@ -1,6 +1,7 @@
 .friends {
     background: #fff;
-    border-radius: 0.3rem;
+    padding: 2rem;
+    border-radius: 0.7rem;
     margin: 2rem;
     width: 25rem;
     height: 30rem;
@@ -68,12 +69,18 @@
 
 .friend-li {
     display: flex;
+    font-weight: bold;
     flex-direction: column;
     align-items: center;
     width: 15rem;
     height: 2rem;
     margin-bottom: 1rem;
     box-shadow: 0 0.1rem 0.1rem rgba(0,0,0,0.19), 0 0.1rem 0.1rem rgba(0,0,0,0.23);
+    background-color: #FF2442;
+    color: #FFf;
+    border-radius: .3rem;
+    flex-wrap: wrap;
+    overflow-wrap: break-word; 
 }
 
 .friend-request-li {
